@@ -1,3 +1,14 @@
+2014-05-25  Milan Crha  <mcrha@redhat.com>
+
+        [Stable] [GTK] GdiObject.h missing in WebKitGTK 2.4.1 tarball
+        https://bugs.webkit.org/show_bug.cgi?id=132814
+
+        Reviewed by Carlos Garcia Campos.
+
+        Add missing files to fix the mingw32 build.
+
+        * GNUmakefile.list.am:
+
 2014-04-19  Filip Pizlo  <fpizlo@apple.com>
 
         Make it easier to check if an integer sum would overflow
